[IMP] web_editor: introduce many2one userValueWidget for reuse
Previously, edition of many2ones in the front-end was done through a
snippet option. While this works fine for raw many2ones in the page, it
is desirable that other snippet options can leverage a many2one as a
part of a more complete or comprehensive option. This commit introduces
a many2one userValueWidget that will be able to be reused by snippet
options, and adapts the existing many2one snippet option to use it
instead.

The interface has also been reworked so as to lean on the existing
we-select userValueWidget for the sake of interface consistency.

task-2190603

--- a/addons/web_editor/static/src/scss/wysiwyg_snippets.scss
+++ b/addons/web_editor/static/src/scss/wysiwyg_snippets.scss
@@ -1159,6 +1159,43 @@ body.editor_enable.editor_has_snippets {
             }
         }
 
+        // Many2one search
+        .o_we_m2o_search {
+            background-color: $o-we-dropdown-item-bg;
+            flex-grow: 1 !important;
+            display: flex;
+            align-items: center;
+            margin-bottom: 1px;
+            border-radius: $o-we-sidebar-content-field-border-radius;
+
+            &::before {
+                content: "\f002";
+                font-size: 1.5em;
+                padding: .25em;
+                font-family: FontAwesome;
+            }
+            
+            input {
+                color: $o-we-sidebar-content-field-pressed-color;
+                border: 1px solid $o-we-sidebar-content-field-pressed-color;
+                border-radius: .25em;
+                background-color: $o-we-bg-dark;
+                margin: .25em;
+                flex-grow: 1;
+                padding-left: .25em;
+            }
+        }
+
+        // Many2one search more indicator
+        .o_we_m2o_search_more {
+            color: var(--o-cc1-btn-primary);
+            margin-top: 1px;
+            width: 100%;
+            cursor: pointer;
+            padding-left: 2em;
+            line-height: $o-we-sidebar-content-field-height - 2 * $o-we-sidebar-content-field-border-width;
+        }
+
         //----------------------------------------------------------------------
         // Layout Utils
         //----------------------------------------------------------------------
