--- a/addons/website_sale/views/templates.xml
+++ b/addons/website_sale/views/templates.xml
@@ -672,6 +672,10 @@
                                 </div>
                             </div>
                             <hr />
+                            <!-- inner content is accessible for inside the product details of the shop page -->
+                            <section class="container" id="inner_content_snippets">
+                                <div class="s_wsale_products_inner_content_accessible"/>
+                            </section>
                         </div>
                     </div>
                 </section>
@@ -681,7 +685,7 @@
     </template>
 
     <template id="product_custom_text" inherit_id="website_sale.product" active="True" customize_show="True" name="Terms and Conditions">
-        <xpath expr="//div[@id='product_details']" position="inside">
+        <xpath expr="//section[@id='inner_content_snippets']" position="before">
             <p class="text-muted">
                 <a href="/terms">Terms and Conditions</a><br/>
                 30-day money-back guarantee<br/>
